--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="1;url= https://drive.uc.cn/s/cf687d3c1e2b4?public=1 ">
+<meta http-equiv="refresh" content="1;url= https://ay.yimfk.com/links/340A8B93 ">
